blocks/carousel/carousel.css
@import url("../swiper/swiper.css");

.carousel {
    max-width: 1440px;
    width: 100%;
    overflow: hidden;
    background: #fff;
}

.carousel-wrapper {
    position: relative;
}

.carousel>.swiper-wrapper {
    max-width: 1265px;
    width: 100%;
    margin-top: 124px;
    /* padding: 48px; */
}

.carousel>.swiper-slide {
    max-width: 1265px;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.carousel>.swiper-wrapper>.swiper-slide>.inner-innerSub-1 {
    max-width: 461px;
    width: 100%;
    height: 100%;
}

.carousel>.swiper-wrapper>.swiper-slide>.inner-innerSub-1>h3 {
    width: 64%;
    padding-bottom: 10px;
    border-bottom: 1px solid #a5a5a5;
}

.carousel>.swiper-wrapper>.swiper-slide>.inner-innerSub-2 {
    display: flex;
}

.carousel>.swiper-wrapper>.swiper-slide>.inner-innerSub-2>p:first-child {
    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15);
    border-radius: 50%;
}

.carousel>.swiper-wrapper>.swiper-slide>.inner-innerSub-2>p:nth-child(2) {
    opacity: 0.4;
}

.carousel>.swiper-wrapper>.swiper-slide>.inner-innerSub-2>p>picture>img {
    width: 363.55px;
    max-width: 363px;
}

.carousel>.btnWrapper {
    max-width: 1265px;
    width: 100%;
    position: absolute;
    top: 40px;
}

.carousel .swiper-button-prev::after {
    font-size: 18px;
}

.carousel .swiper-button-next::after {
    font-size: 18px;
}

.carousel.swiper-pagination-bullets {
    max-width: 1265px;
    width: 100%;
    display: flex;
    /* justify-content: center; */
    position: relative;
}

.carousel .default-content-wrapper {
    text-align: center;
}

/* ==== */
.carousel .carousel .swiper {
    width: 100%;
    position: relative;
}

.carousel .swiper-wrapper {
    display: flex;
}

.carousel>.swiper-wrapper>.swiper-slide {
    flex-shrink: 0;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.carousel .swiper-button-prev {
    left: 10px;
}

.carousel .swiper-button-next {
    right: 10px;
}

.swiper-pagination-bullet {
    margin: 4 4px;
    opacity: 0.6;
    cursor: pointer;
}

/* 2 */

.carousel .carousel.block {
    position: relative;
    padding: 2rem 0;
}

.carousel .carousel.swiper {
    position: relative;
}

.carousel .swiper-wrapper {
    display: flex;
}

.carousel .swiper-wrapper>.swiper-slide {
    max-width: 1300px;
    width: 100%;
    display: flex;
    justify-content: center;
    gap: 20px;
    /* align-items: center; */
    align-items: flex-start;
    margin-top: 100px;
}

.carousel .feature-row {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    gap: 2rem;
    width: 100%;
    max-width: 1100px;
    margin: auto;
}

.carousel .feature-text {
    flex: 1;
    min-width: 300px;
}

.carousel .feature-img img {
    width: 100%;
    max-width: 400px;
}

.carousel h3.swiper-pagination-bullet:first-child {
    border-left: unset;
}

.carousel h3.swiper-pagination-bullet {
    display: flex;
    height: 32px;
    flex-direction: row;
    gap: 10px;
    cursor: pointer;
    transition: all 0.3s ease;
    border-radius: 0px;
    color: #303030;
    font-size: 24px;
    padding-left: 38px;
    border-left: 1px solid #b9b2b2;
    background-color: white;
    opacity: 0.9;
    font-weight: 700;
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: "TSTAR-PRO-Medium";
    text-wrap: nowrap;
}

.carousel .swiper-pagination-bullet img {
    width: 30px;
    height: 30px;
}

.carousel .swiper-pagination-bullet.swiper-pagination-bullet-active {
    opacity: 1;
    /* width: 146px; */
    color: rgb(238, 35, 38);
    font-family: "TSTAR-PRO-Medium";
    display: flex;
    flex-direction: row;
    gap: 10px;
}

.carousel .swiper-pagination-bullet span {
    font-weight: 500;
    margin-top: 4px;
}

.carousel .swiper-button-prev,
.carousel .swiper-button-next {
    background: #ed1c24;
    width: 2.5rem;
    height: 2.5rem;
    color: #fff;
    font-weight: bold;
    font-size: 24px;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 50%;
    cursor: pointer;
    position: absolute;
    top: 0;
    transform: translateY(-150%);
    z-index: 13;
}

.carousel .swiper-button-prev {
    left: 10px;
    left: 0px;
    top: 47px;
}

.carousel .swiper-button-next {
    right: -20px;
    top: 44px;
}

.carousel .btnWrapper>.swiper-pagination {
    max-width: 1032px;
    height: 30px;
    width: 100%;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    display: flex;
    gap: 60px;
    justify-content: flex-start;
    margin: 0 126px;
    gap: 1rem;
    /* margin-bottom: 10px; */
    margin-top: 2px;
    top: -33px;
    gap: 3px;
}

.carousel.block .swiper-wrapper {
    margin: unset;
}

.carousel .inner-innerSub-1>h2 {
    font-family: "TSTAR-PRO-Bold";
    /* font-family: 'TSTAR-PRO-Heavy'; */
    font-size: 32px;
    padding-bottom: 12px;
    border-bottom: 1px solid #a5a5a5;
    width: max-content;
    color: #303030;
    font-weight: 700;
}

.carousel .inner-inne:rSub-1>p {
    font-size: 18px;
    padding-top: 10px;
    color: #303030;
    font-family: "TSTAR-PRO-Medium";
}

.section .carousel-wrapper .carousel .swiper-pagination>h3 {
    width: max-content;
    padding: 7px;
    padding-left: 31px;
    margin: unset;
    padding: 0 15px;
    font-size: 1.5rem;
    font-weight: 500;
}


.section .carousel-wrapper .carousel .swiper-pagination>h3.swiper-pagination-bullet-active {
    font-weight: 900;
    font-family: "TSTAR-PRO-Heavy";
    /* align-items: center; */
    /* transform: scale(1.2); */
}

.carousel #xsens-fi-technology {
    max-width: 100%;
    width: max-content !important;
}

.inner-innerSub-1>h2>.icon>img {
    transform: rotate(17deg) scale(1.2);
    transition: transform 0.3s ease;
    width: 66%;
}

.carousel .swiper-button-prev.disabled,
.carousel .swiper-button-next.disabled {
    /* opacity: 0.4; */
    background: none;
    color: rgb(117, 115, 115);
    pointer-events: none;
    cursor: default;
}

.carousel-container>.default-content-wrapper>h2 {
    font-family: "TSTAR-PRO-Heavy";
    font-weight: 900;
    text-transform: uppercase;
    font-style: italic;
    text-align: center;
    padding: 30px;
    font-size: 3rem;
    color: #303030;
}

.carousel-container {
    margin-top: 64px;
}

.carousel>.swiper-wrapper>.swiper-slide>.inner-innerSub-2>p:nth-child(2)>picture>img {
    max-width: 413px;
    width: 413px;
}

.carousel-container>.carousel-wrapper {
    max-width: 1286px;
    padding: unset;
}

.section .swiper-button-prev.swiper-button-disabled,
.section .swiper-button-next.swiper-button-disabled {
    background-color: #fff;
    color: rgb(73, 73, 73);
}

@media (max-width: 600px) {
    .swiper-slide {
        flex-direction: column;
        gap: 20px;
    }

    .swiper-wrapper {
        padding: 0px;
    }

    .btnWrapper>.swiper-pagination {
        gap: 0px;
        width: 80%;
    }

    .swiper-slide {
        flex-direction: column;
    }

    .inner-innerSub-2>p>picture>img {
        max-width: 200px;
        width: 100%;
        min-height: 200px;
        object-fit: contain;
    }

    .inner-innerSub-1>h2 {
        font-size: 24px;
    }

    .carousel .swiper-wrapper>.swiper-slide {
        margin-top: 60px;
        justify-content: center;
        align-items: center;
    }

    .swiper-button-prev {
        left: 0px;
    }

    .swiper-button-next {
        right: 0px;
    }

    .carousel>.swiper-wrapper {
        margin-top: 69px;
    }

    .carousel-container>.default-content-wrapper>h2 {
        font-size: 1.75rem;
    }

    .price-listing>div:nth-child(2)>div>ul>li:nth-child(1)>fieldset>div {
        font-size: 14px;
        gap: 12px;
    }

    .price-listing>div:nth-child(2)>div>p {
        font-size: 14px;
    }

    .carousel>.swiper-wrapper>.swiper-slide>.inner-innerSub-2>p>picture>img {
        max-width: 156px;
        min-height: 127px !important;
    }

    .carousel>.swiper-wrapper>.swiper-slide>.inner-innerSub-2>p:nth-child(2)>picture>img {
        max-width: 156px;
        min-height: 127px;
    }

    .carousel .btnWrapper>.swiper-pagination {
        /* margin-left: 51px; */
        margin-left: 43px;
        /* width: 210px; */
        /* width: 73%; */
        width: 75%;
        /* top: -45px; */
        top: -62px;

    }

    .carousel .swiper-button-prev,
    .carousel .swiper-button-next {
        width: 24px;
        height: 24px;
        top: 21px;
    }

    .carousel .inner-innerSub-1>p {
        font-size: 16px;
    }

    .carousel .swiper-button-prev::after,
    .carousel .swiper-button-next::after {
        font-size: 10px;
    }

    .carousel .swiper-button-next {
        right: 8px;

    }

    .carousel .swiper-button-prev {
        left: 6px;
    }

    .carousel h3.swiper-pagination-bullet {
        font-size: 18px;
    }

    .carousel .inner-innerSub-1>h2 {
        width: 280px;
        font-family: "TSTAR-PRO-Bold";
        padding-bottom: 8px;
        border-bottom: 1px solid #a5a5a5;
        /* width: max-content; */
        color: #303030;
        font-size: 24px;
        width: max-content;
    }

    .section .carousel-wrapper .carousel .swiper-pagination>h3 {
        font-size: 1.125rem;
    }

    .carousel-container>.default-content-wrapper>h2 {
        padding: 0px 0px 5px 0px;
    }

    .carousel>.swiper-wrapper>.swiper-slide>.inner-innerSub-2 {
        width: 100%;
        justify-content: space-between;
        /* padding: 16px; */
    }

    .section.carousel-container {
        margin: 16px;
    }
}

@media(max-width : 321px) {
    .carousel>.swiper-wrapper>.swiper-slide>.inner-innerSub-2 {
        padding: 0px;
    }

    .hero-footer-icon>.default-content-wrapper>p {
        margin: 10px;
    }
}

